Fix spacing

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -113,7 +113,7 @@
 
 
 #event-edit {
-  font-size: 18px;
+  font-size: 20px;
   margin: 0 auto;
   // position: absolute;
   // right: 25%;
